--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.agrawalsuneet.androidlibs:loaderspack:1.2.3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
