--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.agrawalsuneet.androidlibs:loaderspack:1.2.3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
