--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.agrawalsuneet.androidlibs:loaderspack:1.2.3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'nl.qbusict:cupboard:2.2.0'
 }
